--- a/shell/src/universal/notebooks/kotlin.ipynb
+++ b/shell/src/universal/notebooks/kotlin.ipynb
@@ -1,17 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Smile in Kotlin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Smile is a supported library of Kotlin kernel. When a library is included with %use keyword, default imports are available implicitly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@file:DependsOn(\"com.github.haifengl:smile-kotlin:2.4.0\")\n",
-    "@file:DependsOn(\"com.github.haifengl:smile-nlp:2.4.0\")\n",
-    "@file:DependsOn(\"com.github.haifengl:smile-io:2.4.0\")\n",
+    "// %use smile\n",
     "\n",
+    "// Or test the newer versions through @file:DependsOn and import library explicitly.\n",
+    "@file:DependsOn(\"com.github.haifengl:smile-kotlin:2.4.0\")\n",
+    "@file:DependsOn(\"com.github.haifengl:smile-data:2.4.0\")\n",
+    "@file:DependsOn(\"com.github.haifengl:smile-io:2.4.0\")\n",
+    "@file:DependsOn(\"com.github.haifengl:smile-core:2.4.0\")\n",
+    "\n",
+    "import org.apache.commons.csv.CSVFormat\n",
     "import smile.*\n",
-    "import smile.classification.*"
+    "import smile.data.formula.Formula\n",
+    "import smile.io.Read\n",
+    "import smile.association.*\n",
+    "import smile.classification.*\n",
+    "import smile.clustering.*\n",
+    "import smile.manifold.*\n",
+    "import smile.mds.*\n",
+    "import smile.nlp.*\n",
+    "import smile.wavelet.*"
    ]
   },
   {
@@ -20,7 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ":classpath"
+    "val iris = Read.arff(\"../data/weka/iris.arff\")\n",
+    "println(iris)\n",
+    "iris.summary()"
    ]
   },
   {
@@ -29,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val iris = read.arff(\"../data/weka/iris.arff\")"
+    "val rf = RandomForest.fit(Formula.lhs(\"class\"), iris)\n",
+    "println(\"OOB error = ${rf.error()}\")"
    ]
   },
   {
