update notebooks to 2.5

--- a/shell/src/universal/notebooks/formula.ipynb
+++ b/shell/src/universal/notebooks/formula.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.5.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -87,14 +87,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"salary\" ~ all + (\"a\" && \"b\" && \"c\") - \"d\""
+    "\"salary\" ~ \".\" + (\"a\" && \"b\" && \"c\") - \"d\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This formula includes all the cross terms of `a`, `b`, and `c`, removes the term `d`. Here, `all` means all other variables in the data, not otherwise in the formula. Most mathematical functions can be applied to terms. For example,"
+    "This formula includes all the cross terms of `a`, `b`, and `c`, removes the term `d`. Here, `.` means all other variables in the data, not otherwise in the formula. Most mathematical functions can be applied to terms. For example,"
    ]
   },
   {
@@ -103,14 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"salary\" ~ all + log(\"age\") + onehot(\"gender\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `onehot` function transforms a nominal variable to a series of binary values with one-hot encoding."
+    "\"salary\" ~ \".\" + log(\"age\") + \"gender\""
    ]
   },
   {
@@ -151,8 +144,8 @@
    "outputs": [],
    "source": [
     "val iris = read.arff(\"../data/weka/iris.arff\")\n",
-    "val f: Formula = \"class\" ~ all + exp(\"petallength\") + log(\"sepallength\") + (Terms.$(\"sepalwidth\") * Terms.$(\"petalwidth\"))\n",
-    "f(iris)"
+    "val f: Formula = \"class\" ~ \".\" + exp(\"petallength\") + log(\"sepallength\") + (Terms.$(\"sepalwidth\") * Terms.$(\"petalwidth\"))\n",
+    "f.frame(iris)"
    ]
   },
   {
@@ -170,6 +163,13 @@
    "source": [
     "smile.classification.randomForest(f, iris)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
