--- a/shell/src/universal/notebooks/index.ipynb
+++ b/shell/src/universal/notebooks/index.ipynb
@@ -54,7 +54,11 @@
     "* [Linear Algebra](matrix.ipynb)\n",
     "* [Statistics](stat.ipynb)\n",
     "* [Interpolation](interpolation.ipynb)\n",
-    "* [Wavelet](wavelet.ipynb)"
+    "* [Wavelet](wavelet.ipynb)\n",
+    "\n",
+    "### Other Languages\n",
+    "* [Kotlin](kotlin.ipynb)\n",
+    "* [Clojure](clojure.ipynb)"
    ]
   },
   {
