--- a/shell/src/universal/notebooks/manifold.ipynb
+++ b/shell/src/universal/notebooks/manifold.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.5.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -188,7 +188,7 @@
     "pc.setProjection(50)\n",
     "val x50 = pc.project(x)\n",
     "val sne = tsne(x50, 3, 20, 200, 1000)\n",
-    "show(plot(sne.coordinates, y, 'o'))"
+    "show(plot(sne.coordinates, y, '@'))"
    ]
   }
  ],
