--- a/shell/src/universal/notebooks/plot-swing.ipynb
+++ b/shell/src/universal/notebooks/plot-swing.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.5.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import java.lang.Math._\n",
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val gauss = new MultivariateGaussianDistribution(Array(0.0, 0.0), Matrix.of(Array(Array(1.0, 0.6), Array(0.6, 2.0))))\n",
+    "val gauss = new MultivariateGaussianDistribution(Array(0.0, 0.0), new Matrix(Array(Array(1.0, 0.6), Array(0.6, 2.0))))\n",
     "val data = (0 until 10000) map { i: Int => gauss.rand }\n",
     "show(hist3(data.toArray, 50, 50))"
    ]
