--- a/shell/src/universal/notebooks/regression.ipynb
+++ b/shell/src/universal/notebooks/regression.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.4.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.5.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "val planes = read.arff(\"../data/weka/regression/2dplanes.arff\")\n",
-    "val model = ols(\"y\" ~, planes)"
+    "val model = lm(\"y\" ~, planes)"
    ]
   },
   {
