--- a/shell/src/universal/notebooks/cas.ipynb
+++ b/shell/src/universal/notebooks/cas.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-cas:2.4.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.5.0`\n",
     "\n",
     "import smile.cas._"
    ]
