--- a/shell/src/universal/notebooks/formula.ipynb
+++ b/shell/src/universal/notebooks/formula.ipynb
@@ -15,13 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.5.3`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.6.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
     "import smile._\n",
     "import smile.data._\n",
     "import smile.data.formula._\n",
+    "import smile.data.formula.Terms.$\n",
     "import smile.data.`type`._\n",
     "import smile.data.measure._"
    ]
@@ -134,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's apply a formula on a data frame."
+    "Now let's apply a formula on a data frame. In a program or Scala REPL, we should be able to use the `$` method directly. However the `$` sign is in special use in the notebook. So we apply the full qualiifer `Terms.$` here."
    ]
   },
   {
@@ -144,15 +145,15 @@
    "outputs": [],
    "source": [
     "val iris = read.arff(\"../data/weka/iris.arff\")\n",
-    "val f: Formula = \"class\" ~ \".\" + exp(\"petallength\") + log(\"sepallength\") + (Terms.$(\"sepalwidth\") * Terms.$(\"petalwidth\"))\n",
-    "f.frame(iris)"
+    "val formula = log(\"petallength\") ~ sin(exp(\"petalwidth\")) + (Terms.$(\"sepalwidth\") + Terms.$(\"sepallength\")) + \".\" - \"class\"\n",
+    "formula.frame(iris)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And train a random forest model with this formula."
+    "And train a random forest model with a formula."
    ]
   },
   {
@@ -161,7 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smile.classification.randomForest(f, iris)"
+    "smile.classification.randomForest(\"class\" ~ \".\", iris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we apply a formula with factor cross on the weather data."
    ]
   },
   {
@@ -169,7 +177,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "val weather = read.arff(\"../data/weka/weather.nominal.arff\")\n",
+    "val formula = \"class\" ~ \"outlook\" + (\"temperature\" && \"humidity\" && \"windy\")\n",
+    "formula.frame(weather)"
+   ]
   }
  ],
  "metadata": {
