update arrow/parquet import

--- a/shell/src/universal/notebooks/data-io.ipynb
+++ b/shell/src/universal/notebooks/data-io.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "import $ivy.`org.apache.parquet:parquet-hadoop:1.10.1`\n",
-    "import $ivy.`org.apache.hadoop:hadoop-common:3.0.0`\n",
+    "import $ivy.`org.apache.hadoop:hadoop-common:3.1.4`\n",
     "\n",
     "val userdata1 = read.parquet(\"../data/parquet/userdata1.parquet\")\n",
     "display(userdata1)"
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "import $ivy.`org.apache.avro:avro:1.8.2`\n",
-    "import $ivy.`org.apache.hadoop:hadoop-common:3.0.0`\n",
+    "import $ivy.`org.apache.hadoop:hadoop-common:3.1.4`\n",
     "\n",
     "val userdata1 = read.avro(\"../data/avro/userdata1.avro\", \"../data/avro/userdata.avsc\")\n",
     "display(userdata1)"
@@ -157,8 +157,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`org.apache.arrow:arrow-memory:0.16.0`\n",
-    "import $ivy.`org.apache.arrow:arrow-vector:0.16.0`\n",
+    "import $ivy.`org.apache.arrow:arrow-vector:2.0.0`\n",
+    "import $ivy.`org.apache.arrow:arrow-memory:2.0.0`\n",
+    "import $ivy.`org.apache.arrow:arrow-memory-netty:2.0.0`\n",
     "import $ivy.`org.xerial:sqlite-jdbc:3.28.0`\n",
     "\n",
     "// load SQLite JDBC driver\n",
