consolidate userdata to a single directory

--- a/shell/src/universal/notebooks/data-io.ipynb
+++ b/shell/src/universal/notebooks/data-io.ipynb
@@ -112,7 +112,7 @@
     "import $ivy.`org.apache.parquet:parquet-hadoop:1.10.1`\n",
     "import $ivy.`org.apache.hadoop:hadoop-common:3.1.4`\n",
     "\n",
-    "val userdata1 = read.parquet(\"../data/parquet/userdata1.parquet\")\n",
+    "val userdata1 = read.parquet(\"../data/userdata/userdata1.parquet\")\n",
     "display(userdata1)"
    ]
   },
@@ -134,7 +134,7 @@
     "import $ivy.`org.apache.avro:avro:1.8.2`\n",
     "import $ivy.`org.apache.hadoop:hadoop-common:3.1.4`\n",
     "\n",
-    "val userdata1 = read.avro(\"../data/avro/userdata1.avro\", \"../data/avro/userdata.avsc\")\n",
+    "val userdata1 = read.avro(\"../data/userdata/userdata1.avro\", \"../data/avro/userdata.avsc\")\n",
     "display(userdata1)"
    ]
   },
