--- a/shell/src/universal/notebooks/data-io.ipynb
+++ b/shell/src/universal/notebooks/data-io.ipynb
@@ -331,7 +331,7 @@
     "```\n",
     "These header lines will be ignored.\n",
     "\n",
-    "The sample data `data/text/kos.txt` is in the coordinate format."
+    "The sample data `data/sparse/kos.txt` is in the coordinate format."
    ]
   },
   {
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val kos = SparseDataset.from(java.nio.file.Paths.get(\"../data/text/kos.txt\"), 1)"
+    "val kos = SparseDataset.from(java.nio.file.Paths.get(\"../data/sparse/kos.txt\"), 1)"
    ]
   },
   {
