--- a/shell/src/universal/notebooks/plot-swing.ipynb
+++ b/shell/src/universal/notebooks/plot-swing.ipynb
@@ -28,7 +28,7 @@
     "import smile.interpolation._\n",
     "import smile.math.matrix._\n",
     "import smile.stat.distribution._\n",
-    "import smile._\n",
+    "import smile.read\n",
     "import smile.plot.Render._"
    ]
   },
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val cow = read.csv(\"../data/npr/cow.txt\", header = false)(\"V1\").toDoubleArray\n",
+    "val cow = read.csv(\"../data/stat/cow.txt\", header = false)(\"V1\").toDoubleArray\n",
     "val canvas = hist(cow, 50)\n",
     "canvas.setAxisLabels(\"Weight\", \"Probability\")\n",
     "show(canvas)"
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val gauss = new MultivariateGaussianDistribution(Array(0.0, 0.0), new Matrix(Array(Array(1.0, 0.6), Array(0.6, 2.0))))\n",
+    "val gauss = new MultivariateGaussianDistribution(Array(0.0, 0.0), Matrix.of(Array(Array(1.0, 0.6), Array(0.6, 2.0))))\n",
     "val data = (0 until 10000) map { i: Int => gauss.rand }\n",
     "show(hist3(data.toArray, 50, 50))"
    ]
