update plot-vega examples

--- a/shell/src/universal/notebooks/plot-vega.ipynb
+++ b/shell/src/universal/notebooks/plot-vega.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "val histogram = VegaLite(\"https://vega.github.io/vega-lite/examples/data/movies.json\").\n",
     "  mark(\"bar\").\n",
-    "  x(field = \"IMDB_Rating\", `type` = \"quantitative\", bin = Left(true)).\n",
+    "  x(field = \"IMDB Rating\", `type` = \"quantitative\", bin = Left(true)).\n",
     "  y(field = null, `type` = \"quantitative\", aggregate = \"count\")\n",
     "\n",
     "show(histogram)"
@@ -399,8 +399,8 @@
    "source": [
     "val histHeatmap = VegaLite(\"https://vega.github.io/vega-lite/examples/data/movies.json\").\n",
     "  mark(\"rect\").\n",
-    "  x(field = \"IMDB_Rating\", `type` = \"quantitative\", bin = Right(json\"\"\"{\"maxbins\":60}\"\"\"), title = \"IMDB Rating\").\n",
-    "  y(field = \"Rotten_Tomatoes_Rating\", `type` = \"quantitative\", bin = Right(json\"\"\"{\"maxbins\":40}\"\"\")).\n",
+    "  x(field = \"IMDB Rating\", `type` = \"quantitative\", bin = Right(json\"\"\"{\"maxbins\":60}\"\"\"), title = \"IMDB Rating\").\n",
+    "  y(field = \"Rotten Tomatoes Rating\", `type` = \"quantitative\", bin = Right(json\"\"\"{\"maxbins\":40}\"\"\")).\n",
     "  color(field = null, `type` = \"quantitative\", aggregate = \"count\").\n",
     "  width(300).\n",
     "  height(200).\n",
@@ -437,7 +437,7 @@
     "  height(100).\n",
     "  transform(json\"\"\"\n",
     "    {\n",
-    "      \"density\": \"IMDB_Rating\",\n",
+    "      \"density\": \"IMDB Rating\",\n",
     "      \"bandwidth\": 0.3\n",
     "    }\"\"\"\n",
     "  )\n",
@@ -460,12 +460,12 @@
    "source": [
     "val cdf = VegaLite(\"https://vega.github.io/vega-lite/examples/data/movies.json\").\n",
     "  mark(\"area\").\n",
-    "  x(field = \"IMDB_Rating\", `type` = \"quantitative\").\n",
-    "  y(field = \"cumulative_count\", `type` = \"quantitative\").\n",
+    "  x(field = \"IMDB Rating\", `type` = \"quantitative\").\n",
+    "  y(field = \"Cumulative Count\", `type` = \"quantitative\").\n",
     "  transform(json\"\"\"\n",
     "    {\n",
-    "      \"sort\": [{\"field\": \"IMDB_Rating\"}],\n",
-    "      \"window\": [{\"op\": \"count\", \"field\": \"count\", \"as\": \"cumulative_count\"}],\n",
+    "      \"sort\": [{\"field\": \"IMDB Rating\"}],\n",
+    "      \"window\": [{\"op\": \"count\", \"field\": \"count\", \"as\": \"Cumulative Count\"}],\n",
     "      \"frame\": [null, 0]\n",
     "    }\"\"\"\n",
     "  )\n",
@@ -731,7 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val heatmap = VegaLite(\"https://vega.github.io/vega-lite/examples/data/seattle-temps.csv\").\n",
+    "val heatmap = VegaLite(\"https://vega.github.io/vega-lite/examples/data/seattle-weather.csv\").\n",
     "  mark(\"rect\").\n",
     "  x(field = \"date\", `type` = \"ordinal\", timeUnit = \"date\", title = \"Day\", axis = json\"\"\"{\"labelAngle\": 0, \"format\": \"%e\"}\"\"\").\n",
     "  y(field = \"date\", `type` = \"ordinal\", timeUnit = \"month\", title = \"Month\").\n",
