--- a/shell/src/universal/notebooks/classification.ipynb
+++ b/shell/src/universal/notebooks/classification.ipynb
@@ -72,9 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val formula: Formula = \"class\" ~\n",
-    "val x = formula.x(iris).toArray\n",
-    "val y = formula.y(iris).toIntArray"
+    "val formula: Formula = \"class\" ~ \".\"\n",
+    "val x = formula.x(iris).toArray()\n",
+    "val y = formula.y(iris).toIntArray()"
    ]
   },
   {
@@ -351,14 +351,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val pendigits = read.csv(\"../data/classification/pendigits.txt\", delimiter = '\\t', header = false)\n",
     "\n",
-    "val formula: Formula = \"V17\" ~\n",
-    "val data = formula.x(pendigits).toArray\n",
-    "val y = formula.y(pendigits).toIntArray\n",
+    "val formula: Formula = \"V17\" ~ \".\"\n",
+    "val data = formula.x(pendigits).toArray()\n",
+    "val y = formula.y(pendigits).toIntArray()\n",
     "\n",
     "val scaler = WinsorScaler.fit(data, 0.01, 0.99)\n",
     "val x = scaler.transform(data)\n",
@@ -393,11 +395,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   },
   "toc": {
    "base_numbering": 1,
