--- a/shell/src/universal/notebooks/clustering.ipynb
+++ b/shell/src/universal/notebooks/clustering.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val x = read.csv(\"../data/clustering/gaussian/six.txt\", header = false, delimiter = ' ').toArray\n",
+    "val x = read.csv(\"../data/clustering/rem.txt\", header = false, delimiter = \" \").toArray()\n",
     "val clusters = hclust(x, \"complete\")\n",
     "show(dendrogram(clusters))"
    ]
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val elongate = read.csv(\"../data/clustering/gaussian/elongate.txt\", header = false, delimiter = '\\t').toArray\n",
+    "val elongate = read.csv(\"../data/clustering/elongate.txt\", header = false, delimiter = \"\\t\").toArray()\n",
     "val clusters = kmeans(elongate, 2, runs = 20)\n",
     "show(plot(elongate, clusters.y, '.'))"
    ]
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val t48 = read.csv(\"../data/clustering/chameleon/t4.8k.txt\", header = false, delimiter = ' ').toArray\n",
+    "val t48 = read.csv(\"../data/clustering/d4.txt\", header = false, delimiter = \"\\t\").toArray()\n",
     "val clusters = dbscan(t48, 20, 10)\n",
     "show(plot(t48, clusters.y, '.'))"
    ]
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val sincos = read.csv(\"../data/clustering/nonconvex/sincos.txt\", header = false, delimiter = '\\t').toArray\n",
+    "val sincos = read.csv(\"../data/clustering/sincos.txt\", header = false, delimiter = \"\\t\").toArray()\n",
     "val clusters = specc(sincos, 2, 0.2)\n",
     "show(plot(sincos, clusters.y, 'o'))"
    ]
@@ -393,11 +393,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
