--- a/shell/src/universal/notebooks/data-frame.ipynb
+++ b/shell/src/universal/notebooks/data-frame.ipynb
@@ -18,6 +18,7 @@
     "import $ivy.`com.github.haifengl::smile-scala:3.1.1`\n",
     "import $ivy.`org.slf4j:slf4j-simple:2.0.13`  \n",
     "\n",
+    "import scala.language.existentials\n",
     "import scala.language.postfixOps\n",
     "import org.apache.commons.csv.CSVFormat\n",
     "import java.nio.file.{Files, Paths}\n",
@@ -272,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val dates = read.arff(\"../data/weka/date.arff\")"
@@ -287,11 +290,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
