--- a/shell/src/universal/notebooks/data-io.ipynb
+++ b/shell/src/universal/notebooks/data-io.ipynb
@@ -134,7 +134,7 @@
     "import $ivy.`org.apache.avro:avro:1.11.1`\n",
     "import $ivy.`org.apache.hadoop:hadoop-common:3.3.5`\n",
     "\n",
-    "val userdata1 = read.avro(\"../data/kylo/userdata1.avro\", \"../data/avro/userdata.avsc\")\n",
+    "val userdata1 = read.avro(\"../data/kylo/userdata1.avro\", \"../data/kylo/userdata.avsc\")\n",
     "display(userdata1)"
    ]
   },
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val cpu = read.arff(\"https://github.com/haifengl/smile/blob/master/shell/src/universal/data/weka/cpu.arff?raw=true\")"
+    "val cpu = read.arff(\"../data/weka/cpu.arff\")"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val zip = read.csv(\"../data/usps/zip.train\", delimiter = ' ', header = false)\n",
+    "val zip = read.csv(\"../data/usps/zip.train\", delimiter = \" \", header = false)\n",
     "display(zip)"
    ]
   },
@@ -385,11 +385,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
