--- a/shell/src/universal/notebooks/formula.ipynb
+++ b/shell/src/universal/notebooks/formula.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val f = \"class\" ~"
+    "val f = \"class\" ~ \".\""
    ]
   },
   {
@@ -175,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val weather = read.arff(\"../data/weka/weather.nominal.arff\")\n",
@@ -192,11 +194,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
