--- a/shell/src/universal/notebooks/kotlin.ipynb
+++ b/shell/src/universal/notebooks/kotlin.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "val rf = RandomForest.fit(Formula.lhs(\"class\"), iris)\n",
-    "println(\"OOB error = ${rf.error()}\")"
+    "println(\"OOB error = ${rf.metrics()}\")"
    ]
   },
   {
