--- a/shell/src/universal/notebooks/manifold.ipynb
+++ b/shell/src/universal/notebooks/manifold.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val swissroll = read.csv(\"../data/manifold/swissroll.txt\", header=false, delimiter='\\t').toArray\n",
+    "val swissroll = read.csv(\"../data/manifold/swissroll.txt\", header=false, delimiter=\"\\t\").toArray()\n",
     "show(plot(swissroll, '.', BLUE))"
    ]
   },
@@ -179,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val x = read.csv(\"../data/mnist/mnist2500_X.txt\", header=false, delimiter=' ').toArray\n",
@@ -200,11 +202,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
