--- a/shell/src/universal/notebooks/mds.ipynb
+++ b/shell/src/universal/notebooks/mds.ipynb
@@ -49,7 +49,7 @@
     "import smile.data.formula._\n",
     "import smile.data.measure._\n",
     "import smile.data.`type`._\n",
-    "import smile.mds._\n",
+    "import smile.manifold._\n",
     "\n",
     "import java.awt.Color.{BLACK, BLUE, CYAN, DARK_GRAY, GRAY, GREEN, LIGHT_GRAY, MAGENTA, ORANGE, PINK, RED, WHITE, YELLOW}\n",
     "import smile.plot.swing.Palette.{DARK_RED, VIOLET_RED, DARK_GREEN, LIGHT_GREEN, PASTEL_GREEN, FOREST_GREEN, GRASS_GREEN, NAVY_BLUE, SLATE_BLUE, ROYAL_BLUE, CADET_BLUE, MIDNIGHT_BLUE, SKY_BLUE, STEEL_BLUE, DARK_BLUE, DARK_MAGENTA, DARK_CYAN, PURPLE, LIGHT_PURPLE, DARK_PURPLE, GOLD, BROWN, SALMON, TURQUOISE, BURGUNDY, PLUM}\n",
@@ -77,9 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val eurodist = read.csv(\"../data/projection/eurodist.txt\", delimiter = '\\t', header = false)\n",
-    "val dist = eurodist.drop(0).toArray\n",
-    "val citys = eurodist.stringVector(0).toArray\n",
+    "val eurodist = read.csv(\"../data/mds/eurodist.txt\", delimiter = \"\\t\", header = false)\n",
+    "val dist = eurodist.drop(0).toArray()\n",
+    "val citys = eurodist.stringVector(0).toArray()\n",
     "val x = mds(dist, 2).coordinates\n",
     "show(text(citys, x))"
    ]
@@ -126,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val x = sammon(dist, 2).coordinates\n",
@@ -142,11 +144,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
