--- a/shell/src/universal/notebooks/plot-vega.ipynb
+++ b/shell/src/universal/notebooks/plot-vega.ipynb
@@ -407,8 +407,8 @@
     "  transform(json\"\"\"{\n",
     "    \"filter\": {\n",
     "      \"and\": [\n",
-    "        {\"field\": \"IMDB_Rating\", \"valid\": true},\n",
-    "        {\"field\": \"Rotten_Tomatoes_Rating\", \"valid\": true}\n",
+    "        {\"field\": \"IMDB Rating\", \"valid\": true},\n",
+    "        {\"field\": \"Rotten Tomatoes Rating\", \"valid\": true}\n",
     "      ]}}\"\"\"\n",
     "  ).\n",
     "  config(JsObject(\"view\" -> json\"\"\"{\"stroke\": \"transparent\"}\"\"\"))\n",
@@ -462,12 +462,16 @@
     "  mark(\"area\").\n",
     "  x(field = \"IMDB Rating\", `type` = \"quantitative\").\n",
     "  y(field = \"Cumulative Count\", `type` = \"quantitative\").\n",
-    "  transform(json\"\"\"\n",
-    "    {\n",
-    "      \"sort\": [{\"field\": \"IMDB Rating\"}],\n",
-    "      \"window\": [{\"op\": \"count\", \"field\": \"count\", \"as\": \"Cumulative Count\"}],\n",
-    "      \"frame\": [null, 0]\n",
-    "    }\"\"\"\n",
+    "  transform(jsan\"\"\"[\n",
+    "          {\n",
+    "            \"aggregate\": [{\"op\":  \"count\", \"field\": \"*\", \"as\": \"count\"}],\n",
+    "            \"groupby\": [\"IMDB Rating\"]\n",
+    "          },\n",
+    "          {\n",
+    "            \"sort\": [{\"field\": \"IMDB Rating\"}],\n",
+    "            \"window\": [{\"op\": \"sum\", \"field\": \"count\", \"as\": \"Cumulative Count\"}],\n",
+    "            \"frame\": [null, 0]\n",
+    "          }]\"\"\"\n",
     "  )\n",
     "\n",
     "show(cdf)"
@@ -879,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val geo = VegaLite(\n",
@@ -916,11 +922,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
